--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>test</title>
+<title>Week 3 HTML & CSS</title>
 <style>
 .navigation ul {
   font: bold 11px "Helvetica Neue", Helvetica, Arial, sans-serif;
